<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2011 Jonas Bengtsson
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu
	xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:id="@+id/edit_book"
		android:title="@string/edit_book"
        android:icon="@drawable/menu_create_edit" />
    <item
		android:id="@+id/delete_book"
		android:title="@string/delete_book"
        android:icon="@drawable/menu_delete" />
	<item
		android:id="@+id/share_book"
		android:title="@string/share_book"
        android:icon="@drawable/menu_share" />
	<item
		android:id="@+id/explore_related"
		android:title="@string/explore_related"
        android:icon="@drawable/menu_books" />
</menu>